infra/eks/internet-gateway.yaml
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: eks-test-default-route
  namespace: crossplane-system
spec:
  forProvider:
    region: us-east-1
    destinationCidrBlock: 0.0.0.0/0
    routeTableIdSelector:
      matchLabels:
        cluster: eks-test
    gatewayIdSelector:
      matchLabels:
        cluster: eks-test
  providerConfigRef:
    name: default
